# bluespace_ai_xsens_ros_mti_driver

./: .gitignore  CMakeLists.txt  README.md  README.txt  package.xml
.github/workflows/: main.yml
launch/: display.launch  display.launch.py  xsens_mti_node.launch  xsens_mti_node.launch.py
lib/xspublic/: AMENT_IGNORE  CMakeLists.txt
lib/xspublic/xscommon/: Makefile  abstractadditionallogger.h  additionalloggerbase.cpp  additionalloggerbase.h  config.h  consolelogger.h  enumexpandersbase.cpp  journalexception.cpp  journalexception.h  journalfile.cpp  journalfile.h  journaller.cpp  journaller.h  journalloglevel.h  journalstackwalker.h  journalthreader.cpp  journalthreader.h  stackdumper.cpp  stackdumper.h  stackwalker.cpp  stackwalker.h  stackwalker_linux.cpp  threading.cpp  threading.h  xprintf.cpp  xsens_mutex.h  xsens_threadpool.cpp  xsens_threadpool.h
lib/xspublic/xscontroller/: Makefile  broadcastdevice.cpp  broadcastdevice.h  callbackmanagerxda.cpp  callbackmanagerxda.h  communicator.cpp  communicator.h  dataparser.cpp  dataparser.h  devicecommunicator.cpp  devicefactory.cpp  deviceredetector.cpp  deviceredetector.h  devicetypes.h  enumerateusbdevices.cpp  enumerateusbdevices.h  enumexpanders.cpp  gpsstatus.h  iprotocolhandler.h  iprotocolmanager.h  messageextractor.cpp  messageextractor.h  messageserializer.cpp  messageserializer.h  mtbdatalogger.cpp  mtbfilecommunicator.cpp  mtdevice.cpp  mtdevice.h  mti6x0device.cpp  mti6x0device.h  mti7device.cpp  mti7device.h  mtibasedevice.cpp  mtibasedevice.h  mtigdevice.cpp  mtigdevice.h  mtix00device.cpp  mtix00device.h  mtix0device.cpp  mtix0device.h  (+53 more)
lib/xspublic/xstypes/: Makefile  datapacket_p.cpp  datapacket_p.h  pstdint.h  xsarray.c  xsarray.h  xsbaud.c  xsbaudcode.h  xsbaudrate.h  xsbytearray.c  xsbytearray.h  xscalibrateddata.h  xscopy.h  xsdataidentifier.h  xsdatapacket.cpp  xsdatapacket.h  xsdatapacketptrarray.c  xsdatapacketptrarray.h  xsdeviceid.c  xsdeviceid.h  xsdeviceidarray.c  xsdeviceidarray.h  xsdeviceidlist.h  xsdeviceoptionflag.h  xsdid.h  xsens_compat.h  xsens_generic_matrix.h  xsens_math_throw.cpp  xsens_math_throw.h  xsexception.h  xsfile.c  xsfile.h  xsint64array.c  xsint64array.h  xsintarray.c  xsintarray.h  xsintlist.h  xslibraryloader.c  xslibraryloader.h  xsmath.c  (+46 more)
param/: xsens_mti_node.yaml
rviz/: display.rviz
src/: kalman_filter.cpp  main.cpp  xdacallback.cpp  xdacallback.h  xdacallback.hpp  xdainterface.cpp  xdainterface.h  xdainterface.hpp  xdautils.cpp  xdautils.h  xdautils.hpp  xdautils_test.cpp
src/messagepublishers/: accelerationpublisher.h  accelerationpublisher.hpp  angularvelocitypublisher.h  angularvelocitypublisher.hpp  freeaccelerationpublisher.h  freeaccelerationpublisher.hpp  gnsspublisher.h  gnsspublisher.hpp  imuFreeAccPublisher.h  imupublisher.h  imupublisher.hpp  kalman_filter.h  magneticfieldpublisher.h  magneticfieldpublisher.hpp  orientationincrementspublisher.h  orientationincrementspublisher.hpp  orientationpublisher.h  orientationpublisher.hpp  packetcallback.h  packetcallback.hpp  positionllapublisher.h  positionllapublisher.hpp  pressurepublisher.h  pressurepublisher.hpp  publisherhelperfunctions.h  publisherhelperfunctions.hpp  statuspublisher.h  temperaturepublisher.h  temperaturepublisher.hpp  timereferencepublisher.h  timereferencepublisher.hpp  transformpublisher.h  transformpublisher.hpp  twistpublisher.h  twistpublisher.hpp  velocityincrementpublisher.h  velocityincrementpublisher.hpp  velocitypublisher.h  velocitypublisher.hpp
test/: CMakeLists.txt  xdautils_test.cpp
urdf/: MTI_1.urdf  MTI_10.urdf  MTi_1.urdf  MTi_10.urdf  MTi_6xx.urdf
